<resources>
    <string name="app_name">League of Legend</string>
    <string name="image">image</string>
    <string name="enter">Enter</string>
    <string name="share">Share</string>
    <string name="to_whom">To</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="attach">Attach</string>
    <string name="send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_send">SendActivity</string>
</resources>
